[tool.poetry]
name = "boatbook"
version = "0.1.0"
description = ""
authors = ["Jakob Lund Johannessen <jakob-lj@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
