[tool.poetry]
name = "boatbook"
version = "0.1.0"
description = ""
authors = ["Jakob Lund Johannessen <jakob-lj@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.0"
python-multipart = "^0.0.5"
pyjwt = "^1.7.1"
passlib = "^1.7.2"
jwt = "^1.0.0"
bcrypt = "^3.1.7"
async-generator = "^1.10"
async-exit-stack = "^1.0.1"
sqlalchemy = "^1.3.17"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
